Fixed <pre> wrapping problem in styles.css.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -24,6 +24,7 @@ main {
 }
 
 pre {
+    white-space: pre-wrap;
   
 }
 
